...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


    <EditText

        android:id="@+id/email_text"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
...
        android:drawableLeft="@drawable/email_img"
        tools:ignore="RtlHardcoded,RtlSymmetry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password_text"
        android:inputType="textPassword"
        android:ems="10"
        android:hint= "@string/prompt_password"
        android:cursorVisible="true"
        android:paddingTop="5dp"
        android:layout_marginTop="20dp"
...
        android:layout_below="@+id/email_text"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/key_img"/>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/label_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
...
