<resources>
    <string name="app_name" translatable="false">QDocs</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SignUp</string>
    <string name="error_auth">Authentication failed.</string>
    <string name="facebook_app_id">266538914039794</string>
    <string name="fb_login_protocol_scheme">fb266538914039794</string>
    <string name="sign_out">Sign out</string>
    <string name="add">+</string>

    <!-- String related to scanner -->
    <string name="take_picture">TAKE PICTURE</string>
    <string name="invalid_password_registration">Password at least 6 characters</string>
    <string name="invalid_email_format">Invalid email contentType</string>
    <string name="email_already_used">email already in use</string>
    <string name="format_not_recognized">Format not recognized, please check it!!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_viewer_description">IMAGE VIEWER</string>
    <string name="no_operation">operation not yet implemented</string>
    <string name="play_string">Play</string>
    <string name="pause_string">Pause</string>
    <string name="file_already_stored">File already stored</string>
    <string name="upload_new_file">Upload new file</string>
    <string name="pathname_chooser">pathname chooser</string>
    <string name="delition_failed">Delition failed!</string>
    <string name="already_at_root_level">You are already at root level</string>
    <string name="no_files_associated">There are no files associated with this qr code</string>
    <string name="settings_points_string">⋮</string>
    <string name="enter_email_string">Enter email</string>
    <string name="register_string">Register</string>
    <string name="empty_string" />
    <string name="files_string">FILES</string>
    <string name="scanner_string">SCANNER</string>
    <string name="save_file_string">Save File</string>
    <string name="delete_file_string">Delete File</string>
    <string name="get_qrcode_string">Get QR Code</string>
    <string name="dot_string">…</string>
    <string name="google_sign_in_failed">Sign in failed! try again..</string>
    <string name="me_string">ME</string>
    <string name="settings_string">SETTINGS</string>
    <string name="directory_deleted">Directory successfully deleted</string>
    <string name="delete_directory">Delete Directory</string>
    <string name="info_string">Info</string>
    <string name="logout_string">Log out</string>
    <string name="offline_string">OFFLINE</string>
    <string name="recent_string">RECENT</string>
    <string name="are_you_sure_string">Are you Sure?</string>
    <string name="qr_code_dialog_title">QR CODE</string>
    <string name="qrcode_string">QRCODE</string>
    <string name="qr_code_saved">QR code successfully saved</string>
    <string name="qrcode_already_saved">Qr code already saved!</string>
    <string name="go_back_directory_button_description">go-back directory button</string>
    <string name="fileName_string">fileName</string>
    <string name="image_preview_description">Image preview</string>
    <string name="root_string">home</string>
    <string name="default_folder_string">my_folder</string>
    <string name="confirm_upper_string">Confirm</string>
    <string name="cancel_upper_string">Cancel</string>
    <string name="yes_upper_string">YES</string>
    <string name="no_upper_string">NO</string>
    <string name="null_email">Please insert the email</string>
    <string name="null_password">Please insert a password</string>
    <string name="option_string">Option</string>
    <string name="email_used_string">Email used:</string>
    <string name="display_name_string">Display name:</string>
    <string name="version">version 1.0.0</string>
    <string name="total_space_used">Total space used:</string>
    <string name="file_number_stored">File stored:</string>
    <string name="offline">OFFLINE</string>
    <string name="home">HOME</string>
    <string name="storage">STORAGE</string>
    <string name="recent">RECENT</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="language">Language</string>
    <string name="local_file_deleted">Local file deleted!</string>
    <string name="downloading_file">Downloading file..</string>
    <string name="error_download">Error occurred during download!</string>
    <string name="unable_show_file">Unable to show the file, content file not recognized!</string>
    <string name="file_not_found">File not found!</string>
    <string name="error_copying_file">Error copying the file!</string>
    <string name="deletion_failed">Deletion failed!</string>
    <string name="error_removing_file">Error removing file</string>
    <string name="dir_name_already_used">Directory name already used!!</string>
    <string name="creating_directory">Creating directory..</string>
    <string name="uploading_file">Uploading file..</string>
    <string name="cannot_access_ext_storage">External storage permission denied!</string>
    <string name="insert_folder_name_caps">INSERT FOLDER NAME</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="unable_to_find">Unable to find</string>
    <string name="qdocs_logo">QDocs logo</string>
    <string name="license">LICENSE</string>
    <string name="lamparelli_andrea_and_chitt_pietro">Lamparelli Andrea and Chittò Pietro</string>
    <string name="copyright_2018_2019" translatable="false">Copyright 2018&#8211;2019</string>
    <string name="licensed_under">Licensed under</string>
    <string name="accessed">accessed</string>
    <string name="filename">Filename:</string>
    <string name="content_type">Content Type:</string>
    <string name="created_at">Created At:</string>
    <string name="last_access">Last Access:</string>
    <string name="size">Size:</string>
    <string name="directory_name">Directory Name:</string>
    <string name="search_string">search</string>
    <string name="connection_lost">Connection lost</string>
    <string name="you_are_not_connected">You are not connected!</string>
    <string name="confirm">CONFIRM</string>


</resources>
